<resources>
    <string name="app_name" translatable="false">IPTV</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="text_cmp_setting">Cmp Setting</string>
    <string name="text_policy">Privacy Policy</string>
    <string name="text_term_of_use">Term of use</string>
    <string name="text_feed_back">Feed back</string>
    <string name="text_rate_5_stars">Rate 5 stars</string>
    <string name="text_share_to_your_friend">Share to your friend</string>
    <string name="text_language">Language</string>
    <string name="text_vibrate">Vibrate</string>
    <string name="text_sound_fx">Sound fx</string>
    <string name="text_music">Music</string>
    <string name="text_home">Home</string>
    <string name="text_recent_channel">Recent channel</string>
    <string name="text_playlist">Playlist</string>
    <string name="text_channels">Channels</string>
    <string name="text_search">Search</string>
    <string name="text_live_tv">Live TV</string>
    <string name="text_vod">VOD</string>
    <string-array name="text_first_time">
        <item>Setting things up, please wait…</item>
        <item>Getting your app ready…</item>
        <item>Loading data for the first time…</item>
    </string-array>
    <string name="loading_text">App is Loading…</string>
    <string name="text_audio">%1$s</string>
    <string name="explore_now">Explore Now</string>
    <string name="text_explore_by_country">Explore by Country</string>
    <string name="text_add_a_profile">Add profile</string>
    <string name="text_url_server">URL server</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_add_profile">Add profile</string>
    <string name="text_who_s_watching">Who\'s watching?</string>
    <string name="text_details">Details</string>
    <string name="text_more_like_this">More like this</string>
    <string name="text_trailer">Trailer</string>
    <string name="text_now_playing">Now Playing</string>
    <string name="text_sleep_timer">Sleep Timer</string>
    <string name="text_off">Off</string>
    <string name="text_5_minutes">"5 minutes "</string>
    <string name="text_10_minutes">10 minutes</string>
    <string name="text_30_minutes">30 minutes</string>
    <string name="text_45_minutes">45 minutes</string>
    <string name="text_1_hour">1 hour</string>
    <string name="text_favourite">Favourite</string>
    <string name="text_live">Live</string>
    <string name="text_movie_amp_series"><![CDATA[Movie & Series]]></string>
    <string name="text_live_channel">Live Channel</string>
    <string name="text_all">All</string>
    <string name="text_url">Url</string>
    <string name="text_file">File</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_import_your_playlist_url">Import Your Playlist URL</string>
    <string name="text_how_to_add_a_playlist_in_iptv_player">How to add a Playlist in IPTV Player?</string>
    <string name="text_find_an_m3u_playlist">Find an M3U Playlist →</string>
    <string name="text_find_an_m3u_playlist_">Find an M3U Playlist</string>
    <string name="text_search_online_for_a_publicly_available_iptv_playlist_m3u">Search online for a publicly available IPTV Playlist (M3U)</string>
    <string name="text_copy_the_link_or_download">Copy the Link or Download →</string>
    <string name="text_copy_the_link_or_download_">Copy the Link or Download</string>
    <string name="text_either_copy_the_playlist_link_or_download_the_m3u_file">Either copy the playlist link or download the .m3u file</string>
    <string name="text_import_the_playlist_into_the_app">Import the Playlist into the App →</string>
    <string name="text_import_the_playlist_into_the_app_">Import the Playlist into the App</string>
    <string name="text_in_the_app_add_playlist_import_url_paste_link">In the app: Add playlist → Import URL → Paste link</string>
    <string name="text_start_watching">Start Watching →</string>
    <string name="text_use_any_search_engine_and_type_keywords_like_iptv_m3u_playlist_or_follow_instructions_from_your_tv_service_provider">Use any search engine and type keywords like “IPTV M3U playlist” or follow instructions from your TV service provider.</string>
    <string name="text_a_valid_m3u_link_usually_starts_with_http_or_https_ends_with_m3u_or_m3u8">A valid M3U link usually:\n Starts with http:// or https://\n Ends with .m3u or .m3u8</string>
    <string name="text_whenever_possible_use_reputable_and_legal_sources_some_playlists_may_be_temporary_password_protected_or_geo_restricted">Whenever possible, use reputable and legal sources. Some playlists may be temporary, password-protected, or geo-restricted.</string>
    <string name="text_to_copy_the_m3u_link_mobile_long_press_the_link_copy_link_desktop_right_click_copy_link_address">To copy the M3U link:\n Mobile: Long-press the link → Copy link\n Desktop: Right-click → Copy link address</string>
    <string name="text_to_download_the_file_save_the_m3u_or_m3u8_file_somewhere_easy_to_find">To download the file:\n Save the .m3u or .m3u8 file somewhere easy to find.</string>
    <string name="text_you_can_add_the_file_directly_from_your_device_storage_later_see_step_3">You can add the file directly from your device storage later (see Step 3).</string>
    <string name="text_open_iptv_smart_player">Open IPTV Smart Player.</string>
    <string name="text_tap_add_playlist">Tap Add Playlist.</string>
    <string name="text_choose_one_of_the_following_options_import_url_paste_the_copied_m3u_link_import_m3u_file_select_the_saved_m3u_file_from_your_device_storage">Choose one of the following options:\n Import URL → Paste the copied M3U link.\n Import M3U File → Select the saved .m3u file from your device storage.</string>
    <string name="text_optional_give_your_playlist_a_name_to_recognize_it_later">(Optional) Give your playlist a name to recognize it later.</string>
    <string name="text_tap_save">Tap save.</string>
    <string name="text_wait_a_few_seconds_for_the_app_to_load_channels_and_categories">Wait a few seconds for the app to load channels and categories.</string>
    <string name="text_browse_available_channels_or_use_search_to_find_specific_ones">Browse available channels or use Search to find specific ones.</string>
    <string name="text_if_nothing_appears_check_your_internet_connection_make_sure_the_m3u_link_or_file_is_still_valid_and_active">If nothing appears:\n Check your internet connection.\n Make sure the M3U link or file is still valid and active.</string>
    <string name="text_import_playlist_url">Import Playlist URL</string>
    <string name="text_to_watch_many_tv_channels">To watch many TV channels</string>
    <string name="text_add_your_xtream_account">Add Your Xtream Account</string>
    <string name="text_to_watch_tv_shows_and_videos">To watch TV shows and videos</string>
    <string name="text_add_your_single_stream">Add Your Single Stream</string>
    <string name="text_to_watch_live_events_sports_music">To watch live events (sports, music,...)</string>
    <string name="text_upload_m3u_file">Upload M3U File</string>
    <string name="text_load_from_device">Load From Device</string>
    <string name="text_add_your_playlist">Add your playlist</string>
    <string name="text_import_link">Import Link</string>
    <string name="text_upload_file">Upload File</string>
    <string name="text_playlist_name">Playlist Name</string>
    <string name="text_enter_playlist_name">Enter playlist name</string>
    <string name="text_playlist_url">Playlist URL</string>
    <string name="text_enter_url">Enter url</string>
    <string name="text_passcode_protection">Passcode Protection</string>
    <string name="text_explore_by_countries">Explore By Countries</string>
    <string name="text_explore_by_categories">Explore By Categories</string>
    <string name="text_save">Save</string>
    <string name="text_https_iptv_org_github_io_iptv_countries_m3u" translatable="false">https://iptv-org.github.io/iptv/countries/%1$s.m3u</string>
    <string name="text_m3u_file">M3U File</string>
    <string name="text_no_file_selected">No File Selected</string>
    <string name="text_only_more_file_s_can_be_added_max">Only %1$d more file(s) can be added (max %2$d)</string>
    <string name="text_files">%1$d / %2$d files</string>
    <string name="text_please_select_at_least_1_file">Please select at least 1 file</string>
    <string name="text_processing">Processing</string>
    <string name="text_save_playlist_success">Save playlist success</string>
    <string name="text_connecting">Connecting…</string>
    <string name="text_downloading">Downloading…</string>
    <string name="text_parsing_channels">Parsing channels…</string>
    <string name="text_saving">Saving…</string>
    <string name="text_connection_error">Connection error: %1$s</string>
    <string name="text_no_channels_were_found_at_this_url">No channels were found at this URL.</string>
    <string name="text_favourites">Favourites</string>
    <string name="text_popular_channel">Popular channel</string>
    <string name="text_a_z_sort">A-Z Sort</string>
    <string name="text_edit_name">Edit name</string>
    <string name="text_copy_playlist_url">Copy playlist url</string>
    <string name="text_set_passcode_security">Set Passcode Security</string>
    <string name="text_delete_playlist">Delete playlist</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_add_single_stream">Add Single Stream</string>
    <string name="text_channel_name">Channel name*</string>
    <string name="text_enter_channel_name">Enter channel name</string>
    <string name="text_url_stream">Url Stream*</string>
    <string name="text_logo">Logo channel</string>
    <string name="text_enter_group">Enter group</string>
    <string name="text_upload_video">Upload video</string>
    <string name="text_search_channel">Search channel...</string>
    <string name="text_please_enter_server_url">Please enter server URL</string>
    <string name="text_please_enter_username">Please enter username</string>
    <string name="text_please_enter_password">Please enter password</string>
    <string name="text_set_passcode">Set Passcode</string>
    <string name="text_use_fingerprint">Use Fingerprint</string>
    <string name="text__4_digit_passcode">4-digit passcode</string>
    <string name="text_enter_passcode">Enter Passcode</string>
    <string name="text_do_you_want_to_delete_this_playlist">Do you want to delete this playlist?</string>
    <string name="text_do_you_want_to_delete_this_profile">Do you want to delete this profile?</string>
    <string name="text_custom_time">Custom Time</string>
    <string name="text_minutes_1_180">Minutes (1–180)</string>
    <string name="text_no_timer">No timer</string>
    <string name="text__10_minutes">10 minutes</string>
    <string name="text__30_minutes">30 minutes</string>
    <string name="text__1_hour">1 hour</string>
    <string name="text_custom">⚙ Custom...</string>
    <string name="text_continue">Continue</string>
    <string name="text_import_m3u_m3u8_urls_to_watch_instantly">Import M3U/M3U8 URLs to Watch Instantly</string>
    <string name="text_add_favorite_channels_and_personalize_your_playlist_unlimitedly">Add favorite channels and personalize your playlist unlimitedly</string>
    <string name="text_pro_xtream_integration">Pro Xtream Integration</string>
    <string name="text_experience_the_full_interface_just_like_a_real_smart_tv">Experience the full interface just like a real Smart TV</string>
    <string name="text_stream_the_world_in_your_hands">stream the world in your hands</string>
    <string name="text_watch_video_content_instantly_on_your_tv">Watch video content instantly on your TV</string>
    <string name="text_cast_to_tv">Cast to TV</string>
</resources>