<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_default_dialog"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- Title -->
    <TextView
        android:id="@+id/tvDialogTitle"
        android:fontFamily="@font/inter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sleep_timer"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        android:paddingBottom="16dp" />

    <!-- Options -->
    <TextView android:id="@+id/optOff"
        style="@style/SleepTimerOption"
        android:fontFamily="@font/inter"
        android:text="@string/text_no_timer" />

    <TextView android:id="@+id/opt10"
        style="@style/SleepTimerOption"
        android:fontFamily="@font/inter"
        android:text="@string/text__10_minutes" />

    <TextView android:id="@+id/opt30"
        style="@style/SleepTimerOption"
        android:text="@string/text__30_minutes" />

    <TextView android:id="@+id/opt60"
        style="@style/SleepTimerOption"
        android:text="@string/text__1_hour" />

    <TextView android:id="@+id/optCustom"
        style="@style/SleepTimerOption"
        android:text="@string/text_custom" />

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="#333333" />

    <!-- Cancel -->
    <TextView
        android:id="@+id/btnCancel"
        android:fontFamily="@font/inter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/text_cancel"
        android:textColor="#E53935"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

</LinearLayout>