<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_default_dialog"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_custom_time"
        android:fontFamily="@font/inter"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/etMinutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_dropdown_background_dialog"
        android:hint="@string/text_minutes_1_180"
        android:inputType="number"
        android:textColorHint="?attr/textHint"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCustomCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:fontFamily="@font/inter"
            android:text="@string/text_cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/btnCustomConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="@string/text_confirm"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/inter"
            />

    </LinearLayout>

</LinearLayout>